; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_sge.c_eth_txq_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_sge.c_eth_txq_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sge_eth_txq = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sge_eth_txq*)* @eth_txq_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eth_txq_stop(%struct.sge_eth_txq* %0) #0 {
  %2 = alloca %struct.sge_eth_txq*, align 8
  store %struct.sge_eth_txq* %0, %struct.sge_eth_txq** %2, align 8
  %3 = load %struct.sge_eth_txq*, %struct.sge_eth_txq** %2, align 8
  %4 = getelementptr inbounds %struct.sge_eth_txq, %struct.sge_eth_txq* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @netif_tx_stop_queue(i32 %5)
  %7 = load %struct.sge_eth_txq*, %struct.sge_eth_txq** %2, align 8
  %8 = getelementptr inbounds %struct.sge_eth_txq, %struct.sge_eth_txq* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %9, align 4
  ret void
}

declare dso_local i32 @netif_tx_stop_queue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
